<resources>
    <string name="app_name">Pedometer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_text_popup">History</string>
    <string name="reset_text_popup">Reset</string>
    <string name="turnoff_text_popup">Turn Off</string>
    <string name="today_activity_text">Today\'s Activity</string>
    <string name="steps_text_today">Steps</string>
    <string name="calories_text_today">Calories</string>
    <string name="distance_text_today">Distance</string>
    <string name="time_text_today">Time</string>
    <string name="water_text_today">Water</string>
    <string name="steps_count_text_today">1200</string>
    <string name="calories_count_text_today">24Kcal</string>
    <string name="distance_count_text_today">0.5km</string>
    <string name="time_count_text_today">0h 15m</string>
    <string name="water_count_text_today">800 ml</string>
    <string name="week_txt_history_rv">This Week</string>
    <string name="total_steps_txt_history_rv">8589 Steps</string>
    <string name="edit_steps_txt_btm_sheet">Edit Steps Manually</string>
    <string name="edit_steps_info_btm_sheet">Burned calories, walking distance &amp; duration will be recalculated accordingly</string>
    <string name="save_txt_btm_sheet">Save</string>
    <string name="cancel_txt_btm_sheet">Cancel</string>
    <string name="water_intake_txt_btm_sheet">Water Intake</string>
    <string name="water_intake_info_txt_btm_sheet">Set up &amp; track your daily water intake routine.</string>
    <string name="challenges_txt">Challenges</string>
    <string name="user_motivation_txt">Begin your journey today and pave the path to a stronger, healthier you. The only way to reach your destination is by taking that first step!</string>
    <string name="challenge_started_text">3 days &amp; 4k more steps to complete the challenge</string>

</resources>